sprint_5/ add suggestion route with swagger and patch bug offer/apply/user
